2006-07-17  Gary Benson  <gbenson@redhat.com>

	* resource/META-INF/services/.cvsignore: New file.
	* lib/.cvsignore: Updated.	

2006-07-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicButtonListener.java
	(propertyChange): Only do the text layout caching as long
	as the noGraphics2D property isn't set.
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(PropertyChangeHandler.propertyChange): Only do the text layout
	caching as long	as the noGraphics2D property isn't set.

2006-07-17  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XGraphicsEnvironment.java
	(XGraphicsEnvironment): Make constructor public so that it
	can be called via Class.forName().newInstance().
	* gnu/java/awt/peer/x/XImage.java
	(XImage): Fetch GraphicsEnvironment via
	GraphicsEnvironment.getLocalGraphicsEnvironment() rather
	than the XToolkit method, to avoid double instantiation
	of the XGraphicsEnvironment.
	* gnu/java/awt/peer/x/XToolkit.java
	(env): Removed field.
	(getLocalGraphicsEnvironment): Removed impl. This method
	should not be called since we set the graphicsenv property
	in the constructor.

2006-07-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/UUID.java:
	(compareTo(Object)): Call compareTo(UUID).
	(compareTo(UUID)): Implemented.
	
2006-07-16  Tom Tromey  <tromey@redhat.com>

	* java/lang/StrictMath.java (cbrt): Added '@since'.

2006-07-16  Carsten Neumann  <cn-develop@gmx.net>

	* java/lang/StrictMath.java (cbrt): New method.
	(getLowDWord): New helper method.
	(getHighDWord): Likewise.
	(buildDouble): Likewise.
	(CBRT_B1): New field.
	(CBRT_B2): Likewise.
	(CBRT_C): Likewise.
	(CBRT_D): Likewise.
	(CBRT_E): Likewise.
	(CBRT_F): Likewise.
	(CBRT_G): Likewise.

2006-07-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/MBeanInfo.java:
	(getNotifications()): Implemented.
	* javax/management/NotificationBroadcaster.java:
	(removeNotificationListener(NotificationListener)):
	Renamed from removeListener.